2003/07/08 15:38 rwmcfa1

	* xs/GdkWindow.xs: uncommented the freeze/thaw updates functions per
	thierry vignaud's request.

	* xs/GtkCheckButton.xs: duplicate alias value found by ^

2003/07/08 14:23 muppetman

	* CodeGen.om: massive POD update; use regex to find module name
	instead of relying on people putting whitespace around the '='

2003/07/07 23:10 muppetman

	* CodeGen.pm: slight rework of write_boot.  now you can pass in an
	arbitrary regex for modules to be ignored; the default is still to
	ignore any module that has no :'s in its name.  this fix allows us
	to use write_boot for packages like Gnome::Canvas, which *do* have
	colons in the name of the package that needs to be ignored.
	    also reimplemented the MODULE search to avoid needing grep,
	which is conspicuously absent on most win32 systems.
	    this changes the call signature of write_boot, but all the
	defaults are the same and no module in gtk2-perl-xs was actually
	using anything non-default.  sorry if this breaks you, but it's
	for the best.

2003/07/07 23:03 rwmcfa1

	* t/17.GtkItemFactory.t: added test for item factory

2003/07/06 17:30 muppetman

	* xs/Gtk2.xs: gtk_set_locale().

	* Gtk2.pm: bump version for cvs devel series

2003/07/05 06:06 pcg

        * xs/GtkTextBuffer.xs, xs/GtkClipboard.xs: use length() syntax.

        * xs/GtkTextBuffer.xs, xs/GtkRc.xs, xs/Gdk.xs, xs/GdkProperty.xs,
        xs/GdkScreen.xs, xs/GtkAccelGroup.xs, xs/GtkEditable.xs,
        xs/GtkFontSelection.xs, xs/GtkTextIter.xs: use gchar_own* as
        result type to free the strings and avoid memleaks where no
        CLEANUP existed.

        * xs/GtkTextIter.xs: uncomment get_visible_slice and
        get_visible_text.

        * xs/GtkListItem.xs: fix #endif.

2003/07/04 16:31 muppetman

	* xs/GdkWindow.xs: added gdk_get_default_root_window

	* xs/PangoFont.xs: added PANGO_PIXELS

	* Gtk2.pm: bump version for release

2003/06/27 17:01 pcg

	* xs/GdkWindow.xs: gdk_window_set_back_pixmap allows null pixmap.